[package]
name = "net-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
if-addrs = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.43.0", features = ["full"] }
netstat2 = "0.11.1"
futures = "0.3.31"
crossterm = "0.28.1"
ratatui = "0.29.0"
itertools = "0.13.0"
unicode-width = "0.1.14"
serde_json = "1.0.138"
fakeit = "1.3.0"
color-eyre = "0.6.3"
sysinfo = "0.33.1"
dns-lookup = "2.0.4"